# xemd

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.rst  setup.py
include/xemd/: xemd.hpp
test/: CMakeLists.txt  GTest.cmake.in  main.cpp  test.hpp  test_xemd_entry_point_assertions.py  test_xemd_imf.cpp  test_xemd_interpolation.cpp  test_xemd_xfindextrema.cpp  test_xemd_xspline.cpp  test_xemd_xutils.cpp
xemd/: __init__.py  xemd.py
xemd/core/src/: core.cpp  xceemdan.cpp  xceemdan.hpp  xeemd.cpp  xeemd.hpp  xemd.cpp  xemd.hpp
